Fix horizontal scroll on gh-page

--- a/styles/gh-page.styl
+++ b/styles/gh-page.styl
@@ -117,7 +117,7 @@ pre code::-webkit-scrollbar-thumb {
 // GitHub page elements
 
 .forkme {
-	position:absolute;
+	position:fixed;
 	top:0;
 	right:0;
 	width:149px;
